# solscope-validator-watcher

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml
.github/workflows/: publish.yml
src/validator_watcher/: __init__.py  app.py  tui.py
tests/: test_app.py
